# split_stems_mcp

./: .gitignore  README.md  inference.py  pyproject.toml  requirements-nogui.txt  split-by-bs-rofomer.ps1  split-by-bs-rofomer.sh
.tasks/: task001-design-architect.md  task002-introduce-gradio-mcp.md  tasks.md
docs/: pretrained_models.md
gui/: gradio_cli_wrapper.py
utils/: settings.py
